app/assets/stylesheets/components/project_index.scss
@font-face {
  font-family: 'harry2';
  src: asset-url('HP.TTF');
}

.project-wrapper {
  background: #f6f6f6;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.featured-title {
  padding: 0px 0 0px 46px;
  align-self: flex-start;
}

.project-grid {
  // margin: 40px 0 40px 0;
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  // margin: 0px 70px 0px 70px;
  // margin: 0px 34px 0px 34px;
}

.project-show {
  margin: 0;
}

.project-box {
  display: flex;
  flex-direction: column;
  // margin: 0px 16px 30px 19px;
  margin: 0px 12px 30px 12px;
  width: 285px;
  height: 360px;
  border: 0.5px solid lightgrey;
  box-shadow: 0 2px lightgrey;
}

.project-box:hover {
  height: 360px;
  box-shadow: 4px 4px 4px 4px slategray;
}

@media all and (min-width: 1745px) {
  .project-grid {
    /* When on medium sized screens, we center it by evenly distributing empty space around items */
    justify-content: flex-start;
    margin: 0px 100px 0px 93px;
  }

  .project-box {
    margin: 0px 12px 30px 12px;
  }

  .featured-title {
    padding: 0px 0 0px 103px;
    align-self: flex-start;
  }
}

@media all and (max-width: 800px) {
  .project-grid {
    /* When on medium sized screens, we center it by evenly distributing empty space around items */
    justify-content: flex-end;
    margin: 0px 90px 0px 34px;
  }

  .project-box {
    margin: 0px 12px 30px 12px;
  }
}

/* Small screens */
@media all and (max-width: 500px) {
  .project-grid {
    /* On small screens, we are no longer using row direction but column */
    flex-direction: column;
    margin-top: 20px;
  }
}



.project-content {
  // margin-bottom: 15px;  
  display: flex;
  flex-direction: column;
  height: 90px;
  justify-content: space-around;

}

.project-content > h4 {
  width: 160px;
  // height: 93px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  margin: 0;
}

#project-img {
  margin: 0;
  padding: 0;
  width: 285px;
  height: 270px;
}

.project-follows {
  margin-top: 10px;
  display: flex;
  justify-content: space-between;
  width: 180px;
  line-height: 20px;
}

.project-follows > p {
  font-size: 15px;
}

.project-follow-link {
  font-size: 15px;
  // line-height: 15px;
  font-family: 'harry2';
  letter-spacing: 1px;
  color: gray;
}

.project-follow-link:hover {
  color: rgba(255, 140, 0, 0.988);
  font-size: 17px;
}

.project-info {
  display: flex;
  justify-content: space-around;
  align-items: center;
  display: flex;
  width: 285px;
  height: 90px;
}

#project-icon {
  width: 55px;
  height: 55px;
  border: 5px solid lightsteelblue;
  border-radius: 33px;
}

